deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-api
  namespace: photon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - photon.abhinash.dev
  rules:
    - host: photon.abhinash.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photon-api
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-minio-object
  namespace: photon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - storage.photon.abhinash.dev
  rules:
    - host: storage.photon.abhinash.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photon-minio
                port:
                  name: s3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-minio-console
  namespace: photon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.photon.abhinash.dev
  rules:
    - host: minio.photon.abhinash.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photon-minio
                port:
                  name: console
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photon-grafana
  namespace: photon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.photon.abhinash.dev
  rules:
    - host: grafana.photon.abhinash.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photon-grafana
                port:
                  name: http
